@@ -1,3 +1,9 @@
+Camlp5 Version 7.01:
+--------------------
+
+* [26 Jun 17] Fixed bug: did not compile with OCaml versions
+  between 3.05 and 4.01.1, nor jocaml versions.
+
 Camlp5 Version 7.00:
 --------------------
 
